--- a/src/app/components/rebirth/rebirth.component.html
+++ b/src/app/components/rebirth/rebirth.component.html
@@ -1,21 +1,22 @@
 <div class="clr-row">
   <div class="clr-col-9">
     <div>
-      Here, you can use your hard earned Mind Control Powers!
+      With your vast power, you can now rebirth!
     </div>
-    <app-powers-card [improvementType]="'powers'" [header]="'Next Level'">
-      Beef up your Demagoguery and go to the next level!
+    <app-rebirth-card [improvementType]="'rebirth'" [header]="'Do it again but but better'">
+      Start back from the beginning!<br />
       You will lose all:
       <ul>
         <li>Improvements from the Shop</li>
         <li>Improvements from the Exchange</li>
         <li>Mind Control Power</li>
+        <li>Demigod Levels -> Back to 0</li>
       </ul><br />
       You will keep:
       <ul>
         <li>Humans</li>
       </ul>
-    </app-powers-card>
+    </app-rebirth-card>
   </div>
   <div class="clr-col-3"></div>
 </div>
