--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -13,22 +13,31 @@
         @ {{utilsService.formatNumber(Globals.visibleAmounts.shop)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
       </li>
 
-      <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.powers">
+      <li class="nav-item" *ngIf="!itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.powers">
         <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
           <app-pulsing-text [text]="'Powers'" [initialPulse]="true"></app-pulsing-text>
         </a>
       </li>
-      <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.powers">
+      <li class="nav-item disabled" *ngIf="!itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.powers">
         @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
       </li>
 
-      <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.exchange">
+      <li class="nav-item" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount >= Globals.visibleAmounts.exchange">
         <a [ngClass]="{'nav-link': true, 'active': navigation === 'exchange'}" (click)="setNav('exchange')">
           <app-pulsing-text [text]="'Exchange'" [initialPulse]="true"></app-pulsing-text>
         </a>
       </li>
-      <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.exchange">
+      <li class="nav-item disabled" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount < Globals.visibleAmounts.exchange">
         @ {{utilsService.formatNumber(Globals.visibleAmounts.exchange)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+      </li>
+
+      <li class="nav-item" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.rebirth">
+        <a [ngClass]="{'nav-link': true, 'active': navigation === 'rebirth'}" (click)="setNav('rebirth')">
+          <app-pulsing-text [text]="'Rebirth'" [initialPulse]="true"></app-pulsing-text>
+        </a>
+      </li>
+      <li class="nav-item disabled" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.rebirth">
+        @ {{utilsService.formatNumber(Globals.visibleAmounts.rebirth)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
       </li>
 
     </ul>
@@ -45,6 +54,7 @@
       <app-shop *ngIf="navigation === 'shop'"></app-shop>
       <app-exchange *ngIf="navigation === 'exchange'"></app-exchange>
       <app-powers *ngIf="navigation === 'powers'"></app-powers>
+      <app-rebirth *ngIf="navigation === 'rebirth'"></app-rebirth>
     </div>
   </div>
   <div
