Implement auto-save

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
 <button type="button" (click)="levelService.levelUp()">Level Up</button><br>
 <button type="button" (click)="controlService.navigate('shop')">Cheat Nav</button><br>
 <br> -->
+
 <!-- <input type="text" [(ngModel)]="amounts[1]">
 <button type="button" (click)="setAmount(1)">Set Rocks</button>
 <br>
@@ -18,6 +19,11 @@
 <br>
 <input type="text" [(ngModel)]="amounts[8]">
 <button type="button" (click)="setAmount(8)">Set Wheat</button> -->
+
+<!-- <button type="button" (click)="controlService.save()">Save</button>
+<button type="button" (click)="controlService.load()">Load</button>
+<button type="button" (click)="controlService.clear()">Clear</button> -->
+
 
 <div class="clr-row">
   <div class="clr-col-9">
