Continue incrementing in the background.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,9 +20,9 @@
 <input type="text" [(ngModel)]="amounts[8]">
 <button type="button" (click)="setAmount(8)">Set Wheat</button> -->
 
-<!-- <button type="button" (click)="controlService.save()">Save</button>
-<button type="button" (click)="controlService.load()">Load</button>
-<button type="button" (click)="controlService.clear()">Clear</button> -->
+<button type="button" (click)="controlService.save()">Save</button>
+<!-- <button type="button" (click)="controlService.load()">Load</button> -->
+<button type="button" (click)="controlService.clear()">Clear</button>
 
 
 <div class="clr-row">
