--- a/src/app/components/powers/powers.component.html
+++ b/src/app/components/powers/powers.component.html
@@ -16,6 +16,7 @@
         <li>Humans</li>
       </ul>
     </app-powers-card>
+    <app-powers-summary-card></app-powers-summary-card>
   </div>
   <div class="clr-col-3"></div>
 </div>
