--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -13,14 +13,16 @@
         @ {{utilsService.formatNumber(Globals.visibleAmounts.shop)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
       </li>
 
-      <li class="nav-item" *ngIf="!itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.powers">
-        <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
-          <app-pulsing-text [text]="'Powers'" [initialPulse]="true"></app-pulsing-text>
-        </a>
-      </li>
-      <li class="nav-item disabled" *ngIf="!itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.powers">
-        @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-      </li>
+      <ng-container *ngIf="curLevel && levelService.levels$ | async as levels">
+        <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.powers || curLevel.id > 0">
+          <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
+            <app-pulsing-text [text]="'Powers'" [initialPulse]="true"></app-pulsing-text>
+          </a>
+        </li>
+        <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.powers && curLevel.id  < 1">
+          @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+        </li>
+      </ng-container>
 
       <li class="nav-item" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount >= Globals.visibleAmounts.exchange">
         <a [ngClass]="{'nav-link': true, 'active': navigation === 'exchange'}" (click)="setNav('exchange')">
