--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<!-- <button type="button" (click)="cheat5()">5 Minutes into play</button><br>
+<button type="button" (click)="cheat5()">5 Minutes into play</button><br>
 <button type="button" (click)="cheat20()">20 Minutes into play</button><br>
 <button type="button" (click)="setmcp(100000)">100,000 mcp</button><br>
 <button type="button" (click)="levelService.levelUp()">Level Up</button><br>
 <button type="button" (click)="controlService.navigate('shop')">Cheat Nav</button><br>
-<br> -->
+<br>
 
 <!-- <input type="text" [(ngModel)]="amounts[1]">
 <button type="button" (click)="setAmount(1)">Set Rocks</button>
@@ -25,14 +25,15 @@
 <button type="button" (click)="controlService.clear()">Clear</button>
 
 
-<div class="clr-row">
-  <div class="clr-col-9">
-    <app-activity-card [cardHeader]="'Obtain Raw Materials'" [activityType] = "'raw'"></app-activity-card>
+<div class="clr-row" *ngIf="itemService.items$ | async">
+  <div class="clr-col-lg-auto" *ngFor="let activity of activityService.activities$ | async">
+    <app-activity-card [activityId]="activity.id"></app-activity-card>
   </div>
 </div>
 
-<div class="clr-row" *ngIf="itemService.allowRefiningSet()">
-  <div class="clr-col-9">
+
+<!-- <div class="clr-row" *ngIf="itemService.allowRefiningSet()">
+  <div class="clr-col-12">
     <app-activity-card [cardHeader]="'Refine Materials'" [activityType] = "'refine'"></app-activity-card>
   </div>
-</div>
+</div> -->
