--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,71 +1,95 @@
 <div class="main-container my-card" id="rob-card" *ngIf="itemService.items$ | async as items">
-  <nav class="subnav my-subnav">
-    <ul class="nav">
-      <li class="nav-item"><a [ngClass]="{'nav-link': true, 'active': navigation === 'home'}" (click)="setNav('home')">Home</a></li>
-      <!-- <li class="nav-item"><a class="nav-link" (click)="showLog()">Intro</a></li> -->
+  <header class="header header-2" *ngIf="curLevel && levelService.levels$ | async as levels">
+    <div class="branding">
+      <div class="my-branding">
+        <clr-icon shape="demigod" size="36"></clr-icon>
+        <div>
+          Demigod Rank {{curLevel.id}} <br />
+          "{{curLevel.name}}"
+        </div>
+      </div>
+        <div class="header-nav">
+          <a [ngClass]="{'nav-link': true, 'active': gameNavigation === 'welcome'}" (click)="setGameNav('welcome')">Welcome</a>
+          <a [ngClass]="{'nav-link': true, 'active': gameNavigation === 'play'}" (click)="setGameNav('play')">Play</a>
+        </div>
+    </div>
+  </header>
+  <ng-container *ngIf="gameNavigation === 'welcome'">
+    <div class="content-container">
+      <div class="content-area" style="padding-bottom: 50px;">
+        <app-welcome></app-welcome>
+      </div>
+    </div>
+  </ng-container>
+  <ng-container *ngIf="gameNavigation === 'play'">
+    <nav class="subnav my-subnav">
+      <ul class="nav">
+        <li class="nav-item"><a [ngClass]="{'nav-link': true, 'active': navigation === 'home'}" (click)="setNav('home')">Home</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" (click)="showLog()">Intro</a></li> -->
 
-      <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.shop">
-        <a [ngClass]="{'nav-link': true, 'active': navigation === 'shop'}" (click)="setNav('shop')">
-          <app-pulsing-text [text]="'Shop'" [initialPulse]="true"></app-pulsing-text>
-        </a>
-      </li>
-      <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.shop">
-        @ {{utilsService.formatNumber(Globals.visibleAmounts.shop)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-      </li>
-
-      <ng-container *ngIf="curLevel && levelService.levels$ | async as levels">
-        <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.powers || curLevel.id > 0">
-          <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
-            <app-pulsing-text [text]="'Powers'" [initialPulse]="true"></app-pulsing-text>
+        <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.shop">
+          <a [ngClass]="{'nav-link': true, 'active': navigation === 'shop'}" (click)="setNav('shop')">
+            <app-pulsing-text [text]="'Shop'" [initialPulse]="true"></app-pulsing-text>
           </a>
         </li>
-        <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.powers && curLevel.id  < 1">
-          @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+        <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.shop">
+          @ {{utilsService.formatNumber(Globals.visibleAmounts.shop)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
         </li>
-      </ng-container>
 
-      <li class="nav-item" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount >= Globals.visibleAmounts.exchange">
-        <a [ngClass]="{'nav-link': true, 'active': navigation === 'exchange'}" (click)="setNav('exchange')">
-          <app-pulsing-text [text]="'Exchange'" [initialPulse]="true"></app-pulsing-text>
-        </a>
-      </li>
-      <li class="nav-item disabled" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount < Globals.visibleAmounts.exchange">
-        @ {{utilsService.formatNumber(Globals.visibleAmounts.exchange)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-      </li>
+        <ng-container *ngIf="curLevel && levelService.levels$ | async as levels">
+          <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.powers || curLevel.id > 0">
+            <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
+              <app-pulsing-text [text]="'Powers'" [initialPulse]="true"></app-pulsing-text>
+            </a>
+          </li>
+          <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.powers && curLevel.id  < 1">
+            @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+          </li>
+        </ng-container>
 
-      <li class="nav-item" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.rebirth">
-        <a [ngClass]="{'nav-link': true, 'active': navigation === 'rebirth'}" (click)="setNav('rebirth')">
-          <app-pulsing-text [text]="'Rebirth'" [initialPulse]="true"></app-pulsing-text>
-        </a>
-      </li>
-      <li class="nav-item disabled" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.rebirth">
-        @ {{utilsService.formatNumber(Globals.visibleAmounts.rebirth)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-      </li>
+        <li class="nav-item" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount >= Globals.visibleAmounts.exchange">
+          <a [ngClass]="{'nav-link': true, 'active': navigation === 'exchange'}" (click)="setNav('exchange')">
+            <app-pulsing-text [text]="'Exchange'" [initialPulse]="true"></app-pulsing-text>
+          </a>
+        </li>
+        <li class="nav-item disabled" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount < Globals.visibleAmounts.exchange">
+          @ {{utilsService.formatNumber(Globals.visibleAmounts.exchange)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+        </li>
 
-      <li class="nav-item" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount >= Globals.visibleAmounts.refine">
-        <a [ngClass]="{'nav-link': true, 'active': navigation === 'carnival'}" (click)="setNav('carnival')">
-          <app-pulsing-text [text]="'Demigod Carnival'" [initialPulse]="true"></app-pulsing-text>
-        </a>
-      </li>
-      <li class="nav-item disabled" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount < Globals.visibleAmounts.refine">
-        @ {{utilsService.formatNumber(Globals.visibleAmounts.refine)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-      </li>
+        <li class="nav-item" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.rebirth">
+          <a [ngClass]="{'nav-link': true, 'active': navigation === 'rebirth'}" (click)="setNav('rebirth')">
+            <app-pulsing-text [text]="'Rebirth'" [initialPulse]="true"></app-pulsing-text>
+          </a>
+        </li>
+        <li class="nav-item disabled" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.rebirth">
+          @ {{utilsService.formatNumber(Globals.visibleAmounts.rebirth)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+        </li>
 
-    </ul>
-  </nav>
-  <div class="content-container">
-    <nav class="sidenav my-sidenav">
-      <app-my-sidenav></app-my-sidenav>
+        <li class="nav-item" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount >= Globals.visibleAmounts.refine">
+          <a [ngClass]="{'nav-link': true, 'active': navigation === 'carnival'}" (click)="setNav('carnival')">
+            <app-pulsing-text [text]="'Demigod Carnival'" [initialPulse]="true"></app-pulsing-text>
+          </a>
+        </li>
+        <li class="nav-item disabled" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount < Globals.visibleAmounts.refine">
+          @ {{utilsService.formatNumber(Globals.visibleAmounts.refine)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
+        </li>
+
+      </ul>
     </nav>
-    <div class="content-area" style="padding-bottom: 50px;">
-      <app-home *ngIf="navigation === 'home'"></app-home>
-      <app-shop *ngIf="navigation === 'shop'"></app-shop>
-      <app-exchange *ngIf="navigation === 'exchange'"></app-exchange>
-      <app-powers *ngIf="navigation === 'powers'"></app-powers>
-      <app-rebirth *ngIf="navigation === 'rebirth'"></app-rebirth>
-      <app-carnival *ngIf="navigation === 'carnival'"></app-carnival>
+    <div class="content-container">
+      <nav class="sidenav my-sidenav">
+        <app-my-sidenav></app-my-sidenav>
+      </nav>
+      <div class="content-area" style="padding-bottom: 50px;">
+        <app-home *ngIf="navigation === 'home'"></app-home>
+        <app-shop *ngIf="navigation === 'shop'"></app-shop>
+        <app-exchange *ngIf="navigation === 'exchange'"></app-exchange>
+        <app-powers *ngIf="navigation === 'powers'"></app-powers>
+        <app-rebirth *ngIf="navigation === 'rebirth'"></app-rebirth>
+        <app-carnival *ngIf="navigation === 'carnival'"></app-carnival>
+      </div>
     </div>
-  </div>
+  </ng-container>
   <!-- <div
     class="alert alert-info"
     role="alert"
