--- a/src/app/components/activity-button/activity-button.component.scss
+++ b/src/app/components/activity-button/activity-button.component.scss
@@ -1,3 +1,8 @@
 .my-button {
-  width: 200px;
+  width: 150px;
+}
+
+.custom-styles input[type=checkbox]:checked+label::before {
+  border-color: var(--active-color);
+  background-color: var(--active-color);
 }
