--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
-<!-- <button type="button" (click)="cheat5()">5 Minutes into play</button><br>
+<button type="button" (click)="cheat5()">5 Minutes into play</button><br>
 <button type="button" (click)="cheat20()">20 Minutes into play</button><br>
 <button type="button" (click)="setmcp(100000)">100,000 mcp</button><br>
 <button type="button" (click)="levelService.levelUp()">Level Up</button><br>
 <button type="button" (click)="controlService.navigate('shop')">Cheat Nav</button><br>
-<br> -->
+<br>
 
 <!-- <input type="text" [(ngModel)]="amounts[1]">
 <button type="button" (click)="setAmount(1)">Set Rocks</button>
