--- a/src/app/components/pulsing-text/pulsing-text.component.html
+++ b/src/app/components/pulsing-text/pulsing-text.component.html
@@ -1,1 +1,3 @@
-<span [ngClass]="pulsingText" (animationend)="pulsingText.pulsing=false">{{text}}</span>
+<ng-container *ngIf="pulser && controlService.controls$ | async as controls">
+  <span [ngClass]="pulser" (animationend)="endPulse()">{{text}}</span>
+</ng-container>
