Refactor layout, add navigation service

--- a/src/app/components/item-card/item-card-text/item-card-text.component.html
+++ b/src/app/components/item-card/item-card-text/item-card-text.component.html
@@ -1,3 +1,5 @@
-<clr-icon attr.shape="{{item.icon}}" shape="" size="24" [ngStyle]="{'color': item.color}"></clr-icon>
-: <app-pulsing-text [text]="item.amount" [pulseId]="item.pulseId+'amount'"></app-pulsing-text>
-/ <app-pulsing-text [text]="item.limit" [pulseId]="item.pulseId+'limit'"></app-pulsing-text>
+<ng-container *ngIf="itemService.items$ | async as items">
+  <clr-icon attr.shape="{{item.icon}}" shape="" size="24" [ngStyle]="{'color': item.color}"></clr-icon>
+  : <app-pulsing-text [text]="item.amount" [pulseId]="item.pulseId+'amount'"></app-pulsing-text>
+  / <app-pulsing-text [text]="item.limit" [pulseId]="item.pulseId+'limit'"></app-pulsing-text>
+</ng-container>
