--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -10,7 +10,7 @@
       <app-item-card-text [itemId]="itemId"></app-item-card-text>
     </div>
   </div>
-  <div class="card-footer" *ngIf="activityService.activities$ | async as activities">
+  <div class="card-footer">
     <app-item-card-footer [activityId]="activityId"></app-item-card-footer>
   </div>
 </div>
