--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,139 +1,31 @@
-<clr-main-container *ngIf="itemService.items$ | async as items">
-  <clr-header *ngIf="curLevel && levelService.levels$ | async as levels">
-    <div class="branding">
-      <div class="my-branding">
-        <clr-icon shape="demigod" size="36"></clr-icon>
-        <div>
-          Demigod Rank {{curLevel.id}} <br />
-          "{{curLevel.name}}"
-        </div>
-      </div>
-        <div class="header-nav" [clr-nav-level]="1">
-          <a [ngClass]="{'nav-link': true, 'active': gameNavigation === 'welcome'}" (click)="setGameNav('welcome')">Welcome</a>
-          <a [ngClass]="{'nav-link': true, 'active': gameNavigation === 'play'}" (click)="setGameNav('play')">Play</a>
-        </div>
-    </div>
-  </clr-header>
-  <ng-container *ngIf="gameNavigation === 'welcome'">
+<clr-main-container>
+  <app-layout-header></app-layout-header>
+  <ng-container *ngIf="topNav === 'welcome'">
     <div class="content-container">
       <div class="content-area" style="padding-bottom: 50px;">
         <app-welcome></app-welcome>
       </div>
     </div>
   </ng-container>
-  <ng-container *ngIf="gameNavigation === 'play'">
+  <ng-container *ngIf="topNav === 'play'">
     <nav class="subnav my-subnav">
-      <ul class="nav">
-        <li class="nav-item"><a [ngClass]="{'nav-link': true, 'active': navigation === 'home'}" (click)="setNav('home')">Home</a></li>
-
-        <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.shop">
-          <a [ngClass]="{'nav-link': true, 'active': navigation === 'shop'}" (click)="setNav('shop')">
-            <app-pulsing-text [text]="'Shop'" [redPulse]="true" [pulseId]="'shop'"></app-pulsing-text>
-          </a>
-        </li>
-        <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.shop">
-          @ {{utilsService.formatNumber(Globals.visibleAmounts.shop)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-        </li>
-
-        <ng-container *ngIf="curLevel && levelService.levels$ | async as levels">
-          <li class="nav-item" *ngIf="mcpItem.amount >= Globals.visibleAmounts.powers || curLevel.id > 0">
-            <a [ngClass]="{'nav-link': true, 'active': navigation === 'powers'}" (click)="setNav('powers')">
-              <app-pulsing-text [text]="'Powers'" [redPulse]="true" [pulseId]="'powers'"></app-pulsing-text>
-            </a>
-          </li>
-          <li class="nav-item disabled" *ngIf="mcpItem.amount < Globals.visibleAmounts.powers && curLevel.id  < 1">
-            @ {{utilsService.formatNumber(Globals.visibleAmounts.powers)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-          </li>
-        </ng-container>
-
-        <li class="nav-item" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount >= Globals.visibleAmounts.exchange">
-          <a [ngClass]="{'nav-link': true, 'active': navigation === 'exchange'}" (click)="setNav('exchange')">
-            <app-pulsing-text [text]="'Exchange'" [redPulse]="true" [pulseId]="'exchange'"></app-pulsing-text>
-          </a>
-        </li>
-        <li class="nav-item disabled" *ngIf="itemService.exchangeUnlocked() && mcpItem.amount < Globals.visibleAmounts.exchange">
-          @ {{utilsService.formatNumber(Globals.visibleAmounts.exchange)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-        </li>
-
-        <li class="nav-item" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount >= Globals.visibleAmounts.rebirth">
-          <a [ngClass]="{'nav-link': true, 'active': navigation === 'rebirth'}" (click)="setNav('rebirth')">
-            <app-pulsing-text [text]="'Rebirth'" [redPulse]="true" [pulseId]="'rebirth'"></app-pulsing-text>
-          </a>
-        </li>
-        <li class="nav-item disabled" *ngIf="itemService.rebirthUnlocked() && mcpItem.amount < Globals.visibleAmounts.rebirth">
-          @ {{utilsService.formatNumber(Globals.visibleAmounts.rebirth)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-        </li>
-
-        <li class="nav-item" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount >= Globals.visibleAmounts.refine">
-          <a [ngClass]="{'nav-link': true, 'active': navigation === 'carnival'}" (click)="setNav('carnival')">
-            <app-pulsing-text [text]="'Demigod Carnival'" [redPulse]="true" [pulseId]="'carnival'"></app-pulsing-text>
-          </a>
-        </li>
-        <li class="nav-item disabled" *ngIf="itemService.carnivalUnlocked() && mcpItem.amount < Globals.visibleAmounts.refine">
-          @ {{utilsService.formatNumber(Globals.visibleAmounts.refine)}}<clr-icon attr.shape="{{mcpItem.icon}}" size="18" [ngStyle]="{'color': mcpItem.color}"></clr-icon>
-        </li>
-
-      </ul>
+      <app-layout-subnav></app-layout-subnav>
     </nav>
     <div class="content-container">
-      <!-- <nav class="sidenav my-sidenav" [clr-nav-level]="2">
-        <app-my-sidenav></app-my-sidenav>
-      </nav> -->
       <div class="content-area" style="padding-bottom: 50px;">
       <div class="clr-row">
         <div class="clr-col-12">
           <app-accordion-stats></app-accordion-stats></div>
         <div class="clr-col-12">
-          <app-home *ngIf="navigation === 'home'"></app-home>
-          <app-shop *ngIf="navigation === 'shop'"></app-shop>
-          <app-exchange *ngIf="navigation === 'exchange'"></app-exchange>
-          <app-powers *ngIf="navigation === 'powers'"></app-powers>
-          <app-rebirth *ngIf="navigation === 'rebirth'"></app-rebirth>
-          <app-carnival *ngIf="navigation === 'carnival'"></app-carnival>
+          <app-home *ngIf="contentNav === 'home'"></app-home>
+          <app-shop *ngIf="contentNav === 'shop'"></app-shop>
+          <app-exchange *ngIf="contentNav === 'exchange'"></app-exchange>
+          <app-powers *ngIf="contentNav === 'powers'"></app-powers>
+          <app-rebirth *ngIf="contentNav === 'rebirth'"></app-rebirth>
+          <app-carnival *ngIf="contentNav === 'carnival'"></app-carnival>
         </div>
       </div>
       </div>
     </div>
   </ng-container>
 </clr-main-container>
-  <!-- <div
-    class="alert alert-info"
-    role="alert"
-    [ngStyle]="{'width': '500px', 'position': 'absolute', 'top': messagesTop, 'left': messagesLeft}"
-    *ngIf="logVisible">
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-text">
-          <p *ngFor="let message of messages; let i = index" [className]="'message-'+i">- {{message.text}}</p>
-        </div>
-        <div class="alert-actions">
-          <div *ngIf="advanceStorylineVisible" class="alert-action dropdown bottom-right open">
-            <button class="dropdown-toggle">
-              <span (click)="advanceStoryline()">Next</span>
-            </button>
-            <clr-icon shape="caret down" (click)="advanceDropdownOpen = !advanceDropdownOpen"></clr-icon>
-            <div class="dropdown-menu" *ngIf="advanceDropdownOpen">
-              <a class="dropdown-item" (click)="skipIntro()">Skip Introduction</a>
-            </div>
-          </div>
-        </div>
-        <button *ngIf="!advanceStorylineVisible" class="dropdown-toggle">
-          <span (click)="skipIntro()">Close</span>
-        </button>
-      </div>
-    </div>
-    <button type="button" class="close" aria-label="Close" (click)="hideLog()" style="padding-right: 20px;">
-      <clr-icon aria-hidden="true" shape="close"></clr-icon>
-    </button>
-  </div>
-</div>
-<clr-icon
-  [@pulse]="{value: 'bounced', params: {top: alertTop, left: alertLeft, bounceLeft: alertLeftBounce}}"
-  (@pulse.done)="delayHideAlert()"
-  *ngIf="highlightArrow"
-  shape="arrow"
-  size="24"
-  class="highlightArrow"
-  [ngStyle]="{'left': alertLeft, 'top': alertTop}"
->
-</clr-icon> -->
