--- a/src/app/components/activity-slider/activity-slider.component.html
+++ b/src/app/components/activity-slider/activity-slider.component.html
@@ -1,1 +1,5 @@
-<div [ngStyle]="{'background-color': activity.color, 'height': '100%', 'transform': 'translateX('+activityWidth+')'}"></div>
+<div [ngStyle]="{'border-bottom': '1px solid ' + activity.color, 'border-top': '1px solid ' + activity.color, 'height': '100%'}">
+  <div [ngStyle]="{'width': '100%', 'height': '100%', 'background-color': activity.color}">
+    <div [ngStyle]="{'background-color': 'white', 'height': '100%', 'transform': 'translateX('+activityWidth+')'}"></div>
+  </div>
+</div>
