--- a/src/app/components/item-card/item-card.component.html
+++ b/src/app/components/item-card/item-card.component.html
@@ -1,5 +1,5 @@
 <div class="card" *ngIf="activity && activity.discovered">
-  <div class="card-header">
+  <div class="card-header my-card-header">
     <app-item-card-header [activityId]="activityId"></app-item-card-header>
   </div>
   <div class="card-block">
